--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-linear-gradient": "2.5.6",
     "react-native-paper": "^4.12.4",
     "react-native-vector-icons": "^9.2.0"
   },
