--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "adb reverse tcp:8081 tcp:8081 && react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-linear-gradient": "2.5.6",
+    "react-native-material-dialog": "^0.7.7",
     "react-native-paper": "^4.12.4",
     "react-native-vector-icons": "^9.2.0"
   },
