--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-linear-gradient": "2.5.6",
     "react-native-paper": "^4.12.4",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
